--- a/src/app/courses/courses/courses.component.html
+++ b/src/app/courses/courses/courses.component.html
@@ -1,3 +1,9 @@
+<mat-card>
+
+  <mat-toolbar color="primary">
+   Cursos Disponíveis
+  </mat-toolbar>
+
 <table mat-table [dataSource]="courses" class="mat-elevation-z8">
 
   
@@ -17,5 +23,5 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
-  
+</mat-card>
   
