--- a/src/app/courses/courses/courses.component.css
+++ b/src/app/courses/courses/courses.component.css
@@ -1,3 +1,12 @@
 table {
     width: 100%;
 }
+
+.loading-spinner {
+    background: rgba(0,0,0,0.15);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 25px;
+
+}
