--- a/src/app/courses/courses/courses.component.html
+++ b/src/app/courses/courses/courses.component.html
@@ -4,6 +4,7 @@
    Cursos Disponíveis
   </mat-toolbar>
 
+<div *ngIf="courses$ | async as courses; else loading">
 <table mat-table [dataSource]="courses" class="mat-elevation-z8">
 
   
@@ -23,5 +24,13 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+</div>
+
+<ng-template #loading>
+  <div class="loading-spinner">
+    <mat-spinner></mat-spinner>
+  </div>
+</ng-template>
+
 </mat-card>
   
